clusters/homelab/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: home-arpa-ca
spec:
  ingressClassName: traefik
  rules:
    - host: homepage.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  tls:
    - hosts:
        - homepage.home.arpa
      secretName: homepage-home-arpa-tls
